extend pylint args to ignore tests directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": ["--ignore=E501"],
     "python.linting.pylintEnabled": true,
+    "python.linting.pylintArgs": ["--disable=c0103", "--ignore-patterns=**/tests/**/*.py"],
 
     
     //editor
