--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     // to define every time!!
     // linux
-    "python.defaultInterpreterPath": "/home/foresti/.virtualenvs/venv_test/bin/python",
+    // "python.defaultInterpreterPath": "/home/foresti/.virtualenvs/venv_test/bin/python",
+    //windows
+    "python.defaultInterpreterPath": "C:\\pyproj\\template_vsc\\venv_win\\Scripts\\python.exe",
 
     //environment
     "python.envFile": "${workspaceFolder}/.env",
@@ -16,24 +18,26 @@
     // sort imports with ctr+shift+p -> sort imports
     "python.formatting.provider": "black",
     "editor.defaultFormatter": "ms-python.python",
-    "python.formatting.blackArgs": ["--experimental-string-processing"],
-    "editor.formatOnSave": true,
+    "python.formatting.blackArgs": ["--experimental-string-processing", "--line-length=120"],
+    "editor.formatOnSave": false,
 
     //linting
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": ["--ignore=E501"],
+    "python.linting.flake8Args": ["--config=${workspaceFolder}/config/.flake8"],
+    // "python.linting.flake8Args": ["--ignore=E501"],
     "python.linting.pylintEnabled": true,
     "python.linting.pylintArgs": ["--disable=c0103", "--ignore-patterns=**/tests/**/*.py"],
 
     
     //editor
-    "editor.rulers": [87],
+    "editor.rulers": [119],
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
 
+    // exclude files from sidebar
     "files.exclude": {
         "**/.pytest_cache/": true,
         "**/__pycache__": true,
